Fixed hiding layout stretching screen

--- a/portfolio-site/src/Components/Content/projects.scss
+++ b/portfolio-site/src/Components/Content/projects.scss
@@ -115,6 +115,9 @@ div#project-wrapper {
 
 	// Hide container
 	& div.hide {
+		// Sizing
+		width: 100%;
+
 		// Appearance
 		opacity: 0 !important;
 		visibility: hidden !important;
